public/css/user.css
section.user-management {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  height: calc(100% - 2.5rem);
  position: relative;
}

p.user-title {
  margin: 0.5rem auto;
  display: block;
  color: black;
  font-size: 1.5rem;
}

p.user-error {
  margin: 0.5rem auto;
  display: flex;
  background: red;
  color: white;
  font-size: 1.0rem;
  width: 100%;
  height: 2.25rem;
  justify-content: center;
  align-items: center;
}

section.user-management form.user-credentials {
  width: 90%;
}

@media screen and (min-width: 650px) {
  section.user-management form.user-credentials {
    width: 45%;
  }
}

@media screen and (min-width: 800px) {
  section.user-management form.user-credentials {
    width: 35%;
  }
}

@media screen and (min-width: 1100px) {
  section.user-management form.user-credentials {
    width: 25%;
  }
}

div.user-element {
  margin: 0.3rem 0;
}

label.user-label {
  display: block;
  color: black;
  font-size: 0.8rem;
}

div.user-element input {
  height: 1.8rem;
  width: 100%;
  border: 1px solid black;
  border-radius: 0.25rem;
}

button.user-action {
  height: 2rem;
  width: 100%;
  margin: 1rem 0 0 0;
  border: 1px solid black;
  border-radius: 0.25rem;
  background-color: rgb(190, 180, 255);
  transition: background-color 0.5s ease;
  display: inline-flex;
  align-items: center;
  justify-content: center;
}

button.user-action:hover {
  cursor: pointer;
  background-color: lime;
  transition: background-color 0.5s ease;
}

button.user-action i {
  font-size: 1rem;
  margin-right: 0.35rem;
}

div.user-switch {
  margin: 0 auto;
  color: black;
  font-size: 0.75rem;
}

form.user-demo {
  position: absolute;
  color: rgb(190, 180, 255);
  font-size: 0.75rem;
  bottom: 15px;
  right: 50px;
  width: auto;
}

form.user-demo input {
  display: none;
}

form.user-demo button.btn-demo {
  font: inherit;
  background: none;
  color: black;
  border: none;
  padding: 0;
  text-decoration: underline;
  cursor: pointer;
}

